styles/base.css
* {
    margin: 0;
    padding: 0;
}

body {
    font-family:"Space Grotesk", serif;
    margin: 20px;
    display: grid;
  }
  
header {
    background: rgb(43, 121, 177);
    padding: 0;
    font-size:small;
    color: white;
  }

h1{
    padding: 20px;
    text-align: center;
  }

.navigation {
    background: rgb(168, 166, 166);
    padding: 10px;   
  }
  
.navigation ul{
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;
    font-size: medium;
  }

.navigation li {
	flex: 1 1 auto;
    list-style: none;  
}
.navigation a {
    display: flex;
    flex-direction: column;
    align-items: center;   
	color: black;
    padding: 1rem;
	text-decoration: none;
    font-weight: bold;
}
.navigation a:hover {
	text-decoration:overline;
    transform: scale(1.05);
}

.container{
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    gap: 20px;
}

.me {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
    padding: 20px; 
  }

.country {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
    padding: 20px; 
  }
  
h3{
    text-align: center;
    font-size: 20px; 
} 
  
.row {
    display: grid;
    grid-template-columns: 2fr 1fr; 
    gap: 20px;
}

.card {
    background-color: rgb(226, 236, 249);
    border: 1px solid #ddd;
    border-radius: 10px;
    padding: 20px;
  }

.card h2 {
    background-color:rgb(43, 121, 177);
    color: black;
    padding: 10px;
    border-radius: 5px;
    margin-bottom: 15px;
    text-align: center;
  }

.text {
    margin-right: 20px;
    line-height: 1.6;
    text-align: center;
}

.image1{
    display:grid;
    justify-content: end;
    align-items:end
}

.image1 img {
    max-width: 150px;
    height: auto;
    border-radius: 8px;
}

.image2{
    flex: 1;
    display: flex;
    justify-content: flex-start;
}

.image2 img {
    max-width: 150px;
    border-radius: 8px;
}

.card ul {
    list-style: none;
    padding: 0;
    margin-top: 150px;
    line-height: 30px;
    text-align: center;
  }
  
.card ul li {
    margin: 5px 0;
  }
  
.card ul li a {
    text-decoration: none;
    color: black;
    font-weight: bold;
  }
  
h2{
    font-size: medium;
  }

footer {
    background: rgb(168, 166, 166);
    padding: 2rem;
    text-align: center;
    color: black;
    font-size: 20px;
  }

.last-modified{
    font-size: 15px;
    padding: 10px;
}

